# RTSyn

./: Cargo.toml  README.md  todo.md
app_plugins/comedi_daq/: Cargo.toml  README.md  plugin.toml
app_plugins/comedi_daq/src/: lib.rs
app_plugins/csv_recorder/: Cargo.toml  plugin.toml
app_plugins/csv_recorder/src/: lib.rs
app_plugins/csv_recorder/tests/: plugin_api.rs
app_plugins/live_plotter/: Cargo.toml  plugin.toml
app_plugins/live_plotter/src/: lib.rs
app_plugins/ni_daq/: Cargo.toml  README.md  plugin.toml
app_plugins/ni_daq/src/: lib.rs
app_plugins/performance_monitor/: Cargo.toml  README.md  plugin.toml
app_plugins/performance_monitor/src/: lib.rs
connection/: Cargo.toml
connection/src/: lib.rs
connection/tests/: basic.rs
gui/: Cargo.toml  update_ui_modules.sh
gui/src/: connection_operations.rs  dialog_polling.rs  generic_renderer.rs  lib.rs  notifications.rs  plotter.rs  plugin_manager.rs  plugin_operations.rs  state.rs  state_sync.rs  ui_state.rs  update_ui_state_fields.sh  workspace_manager.rs  workspace_utils.rs
gui/src/ui/: connections.rs  mod.rs  plotters.rs  plugins.rs  workspaces.rs
gui/tests/: basic.rs
rtsyn/: Cargo.toml
rtsyn-cli/: Cargo.toml
rtsyn-cli/src/: client.rs  daemon.rs  lib.rs  plugin_creator.rs  protocol.rs
rtsyn-cli/src/daemon/: connection_handler.rs  mod.rs  plugin_handler.rs  runtime_handler.rs  workspace_handler.rs
rtsyn-cli/src/plugin_creator/: mod.rs  scaffolding.rs  templates.rs  validation.rs
rtsyn-core/: Cargo.toml
rtsyn-core/src/: connection.rs  connections.rs  lib.rs  plotter_view.rs  plugin.rs  plugins.rs  validation.rs  workspace.rs  workspaces.rs
rtsyn-core/src/plugin/: catalog.rs  manager.rs  mod.rs  types.rs
rtsyn-core/src/workspace/: io.rs  manager.rs  mod.rs  settings.rs
rtsyn-core/tests/: connections.rs  plugins.rs  workspaces.rs
rtsyn-gui/: Cargo.toml  update_fields.sh
rtsyn-gui/src/: connection_operations.rs  daemon_viewer.rs  dialog_polling.rs  file_dialogs.rs  formatting.rs  helpers.rs  lib.rs  notification_handler.rs  plotter.rs  plotter_manager.rs  plugin_behavior_manager.rs  plugin_manager.rs  plugin_operations.rs  state.rs  ui_state.rs  utils.rs  workspace_manager.rs  workspace_operations.rs  workspace_utils.rs
rtsyn-gui/src/app_impl/: core.rs  mod.rs  notifications.rs  plotter_management.rs  plugin_introspection.rs  runtime_communication.rs  state_management.rs  timing_configuration.rs
rtsyn-gui/src/app_impl/operations/: connections.rs  dialogs.rs  mod.rs  plugins.rs  workspaces.rs
rtsyn-gui/src/daemon/: mod.rs  viewer.rs
rtsyn-gui/src/managers/: file_dialogs.rs  mod.rs  notifications.rs  plugin_behavior.rs  workspace.rs
rtsyn-gui/src/managers/notifications/: handler.rs  mod.rs  types.rs
rtsyn-gui/src/plotter/: core.rs  data.rs  mod.rs  rendering.rs
rtsyn-gui/src/state/: mod.rs  sync.rs  types.rs  ui.rs
rtsyn-gui/src/ui/: connections.rs  mod.rs  plotters.rs  plugins.rs  widgets.rs  workspaces.rs
rtsyn-gui/src/ui/connections/: editor.rs  management.rs  mod.rs  view.rs
rtsyn-gui/src/ui/plotters/: controls.rs  mod.rs  preview.rs  state.rs  windows.rs
rtsyn-gui/src/ui/plugins/: cards.rs  config.rs  mod.rs  state.rs  windows.rs  wizard.rs
rtsyn-gui/src/ui/workspaces/: dialogs.rs  help.rs  management.rs  mod.rs  settings.rs  uml.rs
rtsyn-gui/src/utils/: mod.rs  numeric.rs  strings.rs  system.rs
rtsyn-gui/tests/: basic.rs
rtsyn-runtime/: Cargo.toml
rtsyn-runtime/src/: connection_cache.rs  daemon.rs  lib.rs  message_handler.rs  message_processor.rs  plugin_factory.rs  plugin_manager.rs  plugin_processors.rs  rt_thread.rs  runtime.rs  runtime_core.rs  state_manager.rs
rtsyn-runtime/tests/: basic.rs  daemon.rs  runtime.rs  state_manager.rs
rtsyn-runtime/tests/mock_plugins/mock_out_5_rs/: Cargo.toml  plugin.toml
rtsyn-runtime/tests/mock_plugins/mock_out_5_rs/src/: lib.rs
rtsyn/app_workspaces/: runtime_settings.defaults.json  runtime_settings.factory.json  test_connections.json
rtsyn/src/: commands.rs  handlers.rs  main.rs  output.rs
rtsyn/tests/: basic.rs
scripts/: install_comedi.bash
workspace/: Cargo.toml
workspace/src/: execution.rs  lib.rs
workspace/tests/: basic.rs
