[package]
name = "rtsyn-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
serde_json = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf", "svg_backend"] }
workspace = { path = "../workspace" }
rtsyn-runtime = { path = "../rtsyn-runtime" }
rtsyn-core = { path = "../rtsyn-core" }
rtsyn-cli = { path = "../rtsyn-cli" }
rtsyn_plugin = { workspace = true }
serde = { workspace = true }
toml = "0.8"
rfd = "0.15.3"
thiserror = { workspace = true }
log = { workspace = true }
csv_recorder_plugin = { path = "../app_plugins/csv_recorder" }
live_plotter_plugin = { path = "../app_plugins/live_plotter" }
performance_monitor_plugin = { path = "../app_plugins/performance_monitor" }
comedi_daq_plugin = { path = "../app_plugins/comedi_daq", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
comedi = ["comedi_daq_plugin", "rtsyn-core/comedi"]
