[package]
name = "rtsyn-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rtsyn_plugin = { workspace = true }
workspace = { path = "../workspace" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
libloading = "0.8"
libc = "0.2"
csv_recorder_plugin = { path = "../app_plugins/csv_recorder" }
live_plotter_plugin = { path = "../app_plugins/live_plotter" }
performance_monitor_plugin = { path = "../app_plugins/performance_monitor" }
ni_daq_plugin = { path = "../app_plugins/ni_daq" }
comedi_daq_plugin = { path = "../app_plugins/comedi_daq" }

[dev-dependencies]
rtsyn_plugin = { workspace = true }
workspace = { path = "../workspace" }
serde_json = { workspace = true }
mock_out_5_rs_runtime = { path = "tests/mock_plugins/mock_out_5_rs" }

[dependencies.tokio]
version = "1.0"
features = ["rt", "sync", "time"]
optional = true

[features]
default = []
preempt_rt = ["tokio"]
xenomai = []
