[package]
name = "rtsyn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rtsyn-runtime = { path = "../rtsyn-runtime" }
workspace = { path = "../workspace" }
rtsyn-gui = { path = "../rtsyn-gui" }
rtsyn-cli = { path = "../rtsyn-cli" }
log = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = []
preempt_rt = ["rtsyn-runtime/preempt_rt"]
xenomai = ["rtsyn-runtime/xenomai"]
comedi = ["rtsyn-runtime/comedi", "rtsyn-gui/comedi"]
