[package]
name = "ni_daq"
version = "0.1.0"
edition = "2021"

[dependencies]
rtsyn_plugin = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["mock"]
mock = []
hardware = ["ni-daqmx-sys"]

[dependencies.ni-daqmx-sys]
version = "20.7"
optional = true

[lib]
crate-type = ["cdylib", "rlib"]
