[package]
name = "ni_daq_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rtsyn_plugin = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"

[features]
default = ["hardware"]
mock = []
hardware = []

[lib]
crate-type = ["cdylib", "rlib"]
